--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
   "dependencies": {
   },
   "devDependencies": {
-    "vows": "0.6.x"
+    "vows": "0.6.x",
+    "connect-flash": "^0.1.1",
+    "koa": "^0.14.0",
+    "koa-generic-session": "^1.3.0",
+    "koa-router": "^3.8.0"
   },
   "scripts": {
     "test": "NODE_PATH=lib node_modules/.bin/vows test/*-test.js"
